style.css
/* ... */
.t_over:nth-child(8):hover ~ #phone_sample1{transform: rotateX(20deg) rotateY(0deg)}
.t_over:nth-child(9):hover ~ #phone_sample1{transform: rotateX(20deg) rotateY(-20deg)}
/* ------------------------------------------------------------------------- */


/* ----------------------------------- About Dexterity -------------------------------------- */

#intro-wrapper {
    display: flex;
    justify-content: center;
}

#about-dexterity{
    color: white;
    text-align: center;
    width: 60vw;
}

#about-dexterity h1{
    font-family: "Zilla Slab", serif;
    font-weight: 700;
    font-style: normal;
    font-size: 50px;
    margin-top: 150px;
}

#about-dexterity p{
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-size: 18px;
    padding: 20px 0;
}

/* ----------------------------------- Dexteritys Vision-------------------------------------- */

#vision-wrapper {
    display: flex;
    justify-content: center;
}

#vision-dexterity{
    color: white;
    text-align: center;
    width: 60vw;
}

#vision-dexterity h1{
    font-family: "Zilla Slab", serif;
    font-weight: 700;
    font-style: normal;
    font-size: 50px;
    margin-top: 150px;
}

#vision-dexterity p{
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-size: 18px;
    padding: 20px 0;
}

/* ----------- CARDS --------------*/

.p-s-l {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    padding-top: 100px;
}

.p-s-l a{
    text-decoration: none;
    color: white;
}

.p-s-l h1{
    font-size: 30px;
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    font-weight: bolder;
    padding: 30px 0 0 30px;
}

.p-s-l h2{
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 300;
    font-style: normal;
    font-size: 19px;
    padding: 30px;
    color: white;
}

.p-s-l img {
    display: block;
    width: 90%;
    margin: 0 auto;
    height: 230px;
    border-radius: 15px;
}

.card  {
    margin: 0px 20px;
    padding: 0 0 20px 0;
    background-color: rgb(35, 36, 36);
    border-radius: 17px;
    box-shadow: 5px  8px 15px 3px rgba(0, 0, 0, 0.397); 
    opacity: 0;
    transform: translateX(0);
    transition: transform 1s ease, opacity 1s ease;
}


.card-left {
    transform: translateX(7%);
}

.card-right {
    transform: translateX(7%);
}

.card.visible {
    opacity: 1;
    transform: translateX(0);
}



/* ----------------- smileys ad -----------------*/
.smileys {
    background-color: white;
    margin:0 -10px;
}

#ad {
    margin-top: 140px;
    padding-top: 140px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    background-color: white;
    color: rgb(35, 36, 36);
    padding-bottom: 140px;
    border-top-left-radius: 30px;
    border-top-right-radius: 9%;

}



.image_container img {
    width: 400px;
    box-shadow: 0px  5px 22px 3px rgba(0, 0, 0, 0.164); 
    border-radius: 20px;
    display: block;
}


.image_container {
    position: relative;
    display: inline-block;
    margin:0 auto;
    opacity: 0; /* Start hidden */
    transform: translateY(170px); /* Start below initial position */
    transition: all 0.8s ease-out; /* Smooth animation */
}

.image_container.fly-up {
    opacity: 1; /* Fade in */
    transform: translateY(0); /* Fly up to its original position */
}





.smileys-text {
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-size: 50px;
    background: linear-gradient(to right, purple, blue, cyan);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

#ad p {
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-size: 19px;
    padding: 40px 80px 40px 0px;
}



#ad a {
    position: relative;
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    text-decoration: none;
    font-size: 18px;
    color: white;
    padding: 10px 20px;
    background: linear-gradient(to right, rgb(17, 1, 156), rgb(0, 217, 255), purple);
    border-radius: 10px;
    background-size: 200% 100%;
    transition: 0.4s;
    top: 0;
}

#ad a:hover {
    animation: join 2s ease;
    font-size: 19px;
}

@keyframes join{
    0% { background-position: 0% 50%;}
    50% { background-position: 100% 100%;}
    100% { background-position: 0% 50%;}
}







/* ----------------- buy the devs a coffee -----------------*/


/* ----------------- FOOTER -----------------*/


.footer {
    margin-top: -200px;
    background-color: rgb(35, 36, 36);
    color: white;
    margin-left: -10px;
    margin-right: -10px;
}
.footer .footer-text h1{
    font-family: "Zilla Slab", serif;
    font-weight: 700;
    font-style: normal;
    font-size: 50px;
    padding-top: 30px;
}

.footer-text h2 {
    font-family: "Montserrat", sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 18px;

}

.footer-text p{
    text-align: center;
    margin-top: 150px; 
    margin-bottom: -200px; 
    font-size: 17px;
}

.footer .footer-text {
    margin: 200px 100px;
}

.footer .upperhalf {
    padding-bottom: 30px;
}


#link {
    padding: 10px 0;
}


.links {
    padding-top: 70px;
}


.links a{
    font-family: "Montserrat", sans-serif;
    font-weight: bolder;
    text-decoration: none;
    color: white;
    font-size: 17px;
}

.quicklink a{
    color: white;
}

.quicklink {
    padding: 10px 0 0 0;
}

/* size of the icons on the footer */

.fa-instagram {font-size: 20px;}
.fa-telegram {font-size: 20px;}
.fa-whatsapp {font-size: 20px;}
.fa-envelope {font-size: 20px;}
/* ... */

